# oram_pro

./: .gitignore  CMakeLists.txt  README.md  README.org  bench_mark.org  binary_sort.ins  config.json  quick_sort.ins  set_inte.ins  test.cpp  test.ins  test_ntl.cpp  testttt.cpp  to_ins.py
cir/: AES128_D_32.txt  AES128_D_32_KeyShared.txt  AES128_E_32.txt  AES128_E_32_KeyShared.txt  FP-lt.txt  Ghash.txt  Ghash_KeyShared.txt  add_32.txt  adder64.txt  and_32.txt  left_shift.txt  mult64.txt  not_32.txt  or_32.txt  right_shift.txt  sub64.txt  sub_32.txt  test_easy.txt  xor_32.txt  zero_check copy.txt  zero_check.txt
cmake/: NTL_LIBConfig.cmake  emp.cmake  empot.cmake  json.cmake  log.cmake  salticidae.cmake  utils.cmake
encoding/: encoder.cc  encoder.h
fss/: fss-client.cpp  fss-common.cpp  fss-server.cpp
fss/include/: fss-client.h  fss-common.h  fss-server.h
include/: config.h  config.hpp  encode.hpp  factory.hpp  fss_help.h  fss_help.hpp  fss_mpc.cpp  fss_mpc.h  io.hpp  net.h  net.hpp  pre_op.h  preliminaries.h  preliminaries.hpp  scmp.hpp  split_func.hpp  test_aid.hpp  timer.hpp
include/implnet/: asio_p2p_net.h  client  client.cpp  server  server.cpp
protocol/: convert.h  env.proto  fss_mpc.h  gc_op.h  operation.h  pre_op.h  preliminaries.h  risc.h
protocol/2_parties/: GCM.cpp  GCM.h  gmw.cpp  gmw.h  gmw_help.h
protocol/3_parties/: csot.hpp  dt_helper.h  outsource_dt.h  sot.hpp
protocol/auditable/: auditable.cc  auditable.h  spdz copy.h  spdz.cc  spdz.h  spdz2.h  test.cpp  testAB.cpp
protocol/malicious_ppml/: bicoptor.h  newnetshare.h  semi.cc  semi.h  sharem.h  sign.h  signv.h  unit.h  verification.h
protocol/mparties/: BMR copy.cpp  BMR copy.h  BMR.cpp  BMR.h
protocol/src/: Test_bicoptor.cpp  Test_fss.cpp  fss_mpc.cpp  gc_op.cpp  risc.cpp  scmp.cpp  test_sign.cpp
src/: Test_3_dt_const.cpp  Test_3_parties.cpp  Test_csot.cpp  Test_gc.cpp  Test_pre.cpp  Test_prf.cpp  Test_ram.cpp  Test_reveal.cpp  Test_risc.cpp  dt_test.cpp  dt_test_64.cpp  oram_rw_test.cpp  test_asyn_net.cpp  test_auditable.cpp  test_gcm.cpp  test_ic.cpp  test_malicious_ppml.cpp  test_mul_ver.cpp  test_mul_ver2.cpp
